--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-    "name": "Vite & React Projekt @ cimdata",
+    "name": "cimdataproject",
     "short_name": "Api Project",
     "description": "Filter for OpenWeather API",
     "theme_color": "#262626",
     "background_color": "#262626",
-    "display": "minimal-ui",
+    "display": "fullscreen",
     "orientation": "portrait"
 }
