--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "cimdataproject",
+    "name": "cimdata Project",
     "short_name": "Api Project",
     "description": "Filter for OpenWeather API",
     "theme_color": "#262626",
