--- a/package.json
+++ b/package.json
@@ -9,12 +9,10 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
-		"mongodb": "^5.1.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"redaxios": "^0.5.1",
-		"sass": "^1.59.3",
-		"wouter": "2.10.*"
+		"sass": "^1.59.3"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.28",
